[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://BoldLabelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://BottomBar.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.501961 )

[node name="BottomBar" type="PanelContainer"]
margin_top = 684.0
margin_right = 1065.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 36 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
margin_right = 1065.0
margin_bottom = 36.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="hbox" type="HBoxContainer" parent="margin"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1063.0
margin_bottom = 34.0
mouse_filter = 2
alignment = 1

[node name="power_label" type="Label" parent="margin/hbox"]
margin_top = 8.0
margin_right = 43.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Power:"

[node name="power_value_label" type="Label" parent="margin/hbox"]
margin_left = 47.0
margin_top = 8.0
margin_right = 199.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="sep1" type="VSeparator" parent="margin/hbox"]
margin_left = 203.0
margin_right = 207.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="population_label" type="Label" parent="margin/hbox"]
margin_left = 211.0
margin_top = 8.0
margin_right = 284.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Population:"

[node name="population_value_label" type="Label" parent="margin/hbox"]
margin_left = 288.0
margin_top = 8.0
margin_right = 440.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="sep2" type="VSeparator" parent="margin/hbox"]
margin_left = 444.0
margin_right = 448.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="mining_label" type="Label" parent="margin/hbox"]
margin_left = 452.0
margin_top = 8.0
margin_right = 499.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Mining:"

[node name="mining_value_label" type="Label" parent="margin/hbox"]
margin_left = 503.0
margin_top = 8.0
margin_right = 655.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="sep3" type="VSeparator" parent="margin/hbox"]
margin_left = 659.0
margin_right = 663.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="ads_label" type="Label" parent="margin/hbox"]
margin_left = 667.0
margin_top = 8.0
margin_right = 693.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Ads:"

[node name="ads_value_label" type="Label" parent="margin/hbox"]
margin_left = 697.0
margin_top = 8.0
margin_right = 849.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="sep4" type="VSeparator" parent="margin/hbox"]
margin_left = 853.0
margin_right = 857.0
margin_bottom = 32.0
theme = ExtResource( 1 )

[node name="reach_label" type="Label" parent="margin/hbox"]
margin_left = 861.0
margin_top = 8.0
margin_right = 904.0
margin_bottom = 23.0
hint_tooltip = "Percentage of population that the factories can sell to. Reach depends on the number of ads being produced."
mouse_filter = 1
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Reach:"

[node name="reach_value_label" type="Label" parent="margin/hbox"]
margin_left = 908.0
margin_top = 8.0
margin_right = 1061.0
margin_bottom = 23.0
hint_tooltip = "Percentage of population that the factories can sell to. Reach depends on the number of ads being produced."
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
